[gd_scene load_steps=5 format=3 uid="uid://dug4jmvhrb3t1"]

[ext_resource type="Theme" uid="uid://u5qnpgxqykiv" path="res://UI/Themes/dark/theme.tres" id="1_usj82"]
[ext_resource type="Script" path="res://UI/Dialogs/AboutDialog.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b6io62g8b730e" path="res://Assets/icon.png" id="3"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="AboutDialog" type="PanelContainer"]
offset_right = 347.0
offset_bottom = 180.0
size_flags_horizontal = 4
theme = ExtResource("1_usj82")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VersionLabel" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lorien vX.Y.Z"

[node name="CopyrightLabel" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ABOUT_DIALOG_COPYRIGHT"

[node name="GithubLinkButton" type="LinkButton" parent="VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "github.com/mbrlabs/Lorien"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("1")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "ABOUT_DIALOG_LICSENSE"

[node name="LicenseButton" type="LinkButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "MIT License"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "ABOUT_DIALOG_BASED_ON"

[node name="GodotButton" type="LinkButton" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
text = "Godot Game Engine"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "ABOUT_DIALOG_EASTEREGG"

[node name="KennyButton" type="LinkButton" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
text = "Kenny's Platformer Art Deluxe"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Icon set:"

[node name="RemixIconsButton" type="LinkButton" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
text = "Remix Icon"
